# QBot_Jiemeng

./: .clang-format  .clangd  .gitignore  .luarc.json  CMakeLists.txt  Code_Runner.h  File_Read.h  Func_Timeout.h  Get_Base_64.h  Jiemeng.cpp  Jiemeng.rc  Jiemeng_Algorithm.h  Jiemeng_Basic.h  Jiemeng_Plugin.h  LICENSE  Message_Delete.h  Message_Input.h  Message_Operate.h  Module_Draw.h  Orders.h  Pre_Catch.h  README.md  Sockets_Input.h  Time_Check.h  Weather_Report.h  build.sh  cbuild.sh  opstring.h  r_adb.h  start.cpp  symbol.cpp  test.json  test2.cpp  url_order.h  urls.h  white_to_ground.m  winbuild.sh  用法指南.md  进阶说明.md
Codes/: AI_draw.h  Ans_Generator.cpp  Comrun.cpp  Daily.h  Encrypt.h  File_Read.h  Game.h  HttpPost.h  Jie_Meng_Base.h  Jiemeng.cpp  Jiemeng_Basic.h  Key_Ans.h  Listen.cpp  Msg_get.h  Msg_type.h  Note.h  Socket_Input.h  Special_Judge.h  Weather_Report.h  mat_run.m  md5.h  opstring.h  output.h  output_spjfun.h  start.cpp
Codes/plugin_code/: rand.cpp
Jiemeng/: Ans.ans  Ans_Jiemeng.ans  black_list.lst  broad_pri.lst  chem.lst  config.cfg  go-cqhttp参考配置config.yml  moe_eye.txt  moe_eyeclr.txt  moe_kami.txt  moe_kamiclr.txt  moe_zokusai.txt  notes.txt  pri_white_list.lst  priv_list.lst  start.cfg
code/: .gitignore  AI_draw2.h  Ans.h  Ans_Generator.cpp  Baidu_Trans_API.h  Bot.bat  Bot_Send_Check.h  CMakeLists.txt  CQjson.h  Code_Runner.h  Daily.h  Encrypt.h  File_Read.h  Func_Timeout.h  Game.h  Get_Base_64.h  HttpPost.h  Jie_Meng_Base.h  Jiemeg_IO.cpp  Jiemeng.cpp  Jiemeng.hpp  Jiemeng.rc  JiemengInit.cpp  Jiemeng_Algorithm.cpp  Jiemeng_Algorithm.h  Jiemeng_Algorithm.hpp  Jiemeng_Ans.h  Jiemeng_Answer.cpp  Jiemeng_Answer.hpp  Jiemeng_AnswerCheck.cpp  Jiemeng_AnswerGetlist.cpp  Jiemeng_AnswerInit.cpp  Jiemeng_Basic.h  Jiemeng_CQJson.cpp  Jiemeng_CQJson.hpp  Jiemeng_Config.cpp  Jiemeng_Config.h  Jiemeng_Config.hpp  Jiemeng_Config_Class.h  Jiemeng_DebugIO.cpp  (+93 more)
code/luarc/: 1-config.lua  1-package.lua  LuaMetaLib.lua  README.md  api.lua  bot_api.lua  bot_deck.lua  bot_extend.lua  bot_info.lua  bot_lua_shell.lua  bot_meta.lua  bot_order.lua  bot_os_shell.lua  bot_reRecv.lua  bot_string.lua  bot_txt2img.lua  config_order.lua  deck_draw.lua  del_msg.lua  draw_deck.lua  get_para.lua  info.lua  jm_algorithm.lua  jm_generic_extend.lua  lua_order.lua  message_output.lua  onebot-api.lua  os_sh.lua  set_title.lua  status.lua  txt2img.lua  txt2oper.lua  type_re.lua
code/plugin_code/: card.cpp  mota.cpp  plugin_test.cpp  rand.cpp  rand_text.cpp
code/txt2img/: txt2img  txt2img.py
plugin_code/: at_ban.cpp  card.cpp  lcard.cpp  mota.cpp  mota_search.py  pyplugin_template.py  rand  rand.cpp  rand_text  rand_text.cpp
sample/: README.md  config.json
sample/Answer/: admin_order.json  api.json  code_run.json  jrrp.json  order.json  pre_catch_sample.json  time.json  事件触发.json  千分抽卡.json  违禁.json  问好.json
sample/deck/: ask.json  sample.json
sample/lualib/: broad.lua  chat.lua  code_run.lua  easymapi.lua  game.lua  get_msg.lua
sample/lualib/chat/: init.lua
sample/lualib/game/: game.lua  init.lua
sample/user_luarc/: broad.lua  code_run.lua  get_msg.lua
(+2 files in other folders)
